firebase working and build succeess

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,18 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.petsfolio.employee">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="com.google.android.gms.permission.AD_ID"/>
+<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
+<uses-permission android:name="android.permission.WAKE_LOCK"/>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+<uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+<!--       <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" /> -->
+<uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+<uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <application
       android:name=".MainApplication"
@@ -21,6 +33,8 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDdXjkRFWa4oV-WVPrlKvPLlbwix_hWwr0"/>
       </activity>
+      <service android:name="io.invertase.firebase.messaging.ReactNativeFirebaseMessagingService" android:exported="true" tools:replace="android:exported"/>
     </application>
 </manifest>
