--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-asset": "^2.1.1",
     "react-native-background-timer": "^2.4.1",
     "react-native-country-codes-picker": "^2.3.5",
+    "react-native-device-info": "^14.0.4",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.27.1",
